# aligned-vec

./: Cargo.toml  README.md
examples/: alloc_zero.rs
src/: io.rs  lib.rs  raw.rs
