[package]
name = "aligned-vec"
version = "0.3.1"
edition = "2021"
authors = ["sarah <>"]
description = "Aligned vector and box containers"
readme = "README.md"
repository = "https://github.com/sarah-ek/aligned-vec/"
license = "MIT"
keywords = ["vec", "allocation", "box", "slice", "alignment"]

[dependencies]
