[package]
name = "aligned-vec"
version = "0.5.0"
edition = "2021"
authors = ["sarah <>"]
description = "Aligned vector and box containers"
readme = "README.md"
repository = "https://github.com/sarah-ek/aligned-vec/"
license = "MIT"
keywords = ["vec", "allocation", "box", "slice", "alignment"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
